this currently breaks on click cuz of lenght it seems pls fix fast

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,22 @@
     
 }
 
+.ButtonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
+    position: absolute;
+    right: 2vw;
+    
+}
+
+.top{
+    top: 2vw;
+}
+.bottom {
+    top: 12vw;
+}
 .App-Data{
     position: absolute;
     top: 28vw;
@@ -66,6 +82,3 @@
     left: 28vw;
 }
 
-button{
- flex: 1;
-}
